# ML-Microstructure-Signals

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
configs/: backtest.yaml  evaluate.yaml  predict.yaml  train.yaml
configs/backtest/: default.yaml
configs/dataset/: synthetic.yaml
configs/features/: default.yaml
configs/model/: lgbm.yaml  logistic_regression.yaml  random_forest.yaml
ml_microstructure/: __init__.py
ml_microstructure/backtest/: __init__.py  execution.py  metrics.py  run.py  signals.py
ml_microstructure/dashboards/: streamlit_app.py
ml_microstructure/data/: __init__.py  loaders.py
ml_microstructure/features/: __init__.py  extractors.py
ml_microstructure/models/: __init__.py  predictors.py
ml_microstructure/pipeline/: __init__.py  evaluate.py  predict.py  train.py
ml_microstructure/utils/: __init__.py  config.py  io.py  labeling.py  time.py
reports/paper/: README.md
tests/: __init__.py  test_backtest.py  test_data.py  test_features.py  test_models.py
